# PyRedStoneX

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  core.cpp  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
CMake/: PyRedStoneXConfig.cmake.in
examples/gate_plugin/: CMakeLists.txt  gate_plugin.c  pyproject.toml  setup.py  test.py
examples/gate_plugin/include/: plugin.h  redstonex_obj.h  redstonex_sim.h  redstonex_types.h
examples/gate_plugin/src/gate_plugin/: __init__.py
examples/gate_plugin/src/gate_plugin/csrc/: gate_plugin.c
examples/gate_plugin/src/gate_plugin/include/: gate_plugin.h
examples/gate_plugin/tests/: alu_test.py  full_adder_test.py  ripple_carry_adder_test.py  test.py
redstonex/: __init__.py  _core.pyi  objects.py  registry.py  simulator.py  types.py
src/: core.cpp  plugin.h
src/redstonex/: __init__.py  _core.pyi  objects.py  simulator.py  utils.py
src/redstonex/csrc/: core.cpp
src/redstonex/include/: plugin.h  redstonex_components.h  redstonex_obj.h  redstonex_sim.h  redstonex_types.h
src/redstonex/include/redstonex/: plugin.h
tests/: high_churn_torch_oscillators_benchmark.py  high_fan_out_benchmark.py  long_chain_benchmark.py  test.py
