[build-system]
requires = ["setuptools>=61.0.0", "pybind11>=2.12.0", "cmake>=3.12"]
build-backend = "setuptools.build_meta"

[project]
name = "redstonex"
version = "0.1.1"
description = "Python bindings for RedStoneX simulation backend"
readme = "README.md" 
requires-python = ">=3.10"
authors = [{ name = "Czy_4201b" }]

license = "GPL-3.0-or-later"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
