[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=3.0",
    "setuptools-scm"
]
build-backend = "scikit_build_core.build"

[project]
name = "redstonex"
dynamic = ["version"]
description = "Python bindings for RedStoneX simulation backend"
readme = "README.md" 
requires-python = ">=3.10"
authors = [
    { name = "Czy_4201b" }
]

license = "GPL-3.0-or-later"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Programming Language :: C++",
]

[tool.scikit-build]
wheel.packages = ["src/redstonex"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"
